syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";

service AnalyticsService {
  rpc CalculateWorkerRating (WorkerRatingRequest) returns (WorkerRatingResponse) {}
}

message WorkerRatingRequest {
  int64 worker_id = 1;
}

message WorkerRatingResponse {
  int64 worker_id = 1;
  int32 rating_score = 2;
  string verdict = 3;
}
